added script.js file

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
       </div>
       <button><img src="images/generate.png"> Generate Password</button>
     </div>
+
+
+    <script src="script.js"></script>
   </body>
 </html>
